--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -204,9 +204,9 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>416 116 651 290 0 0 1280 777 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>208 135 924 485 0 0 1280 777 </string>
+	<string>956 431 924 485 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>516 289 585 473 0 0 2560 1417 </string>
+	<string>7 38 2554 1371 0 0 2560 1417 </string>
 	<key>NeverWarnAboutShortLivedSessions_6907D920-2D28-4444-87AC-FC1343BC3E85</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -765,11 +765,11 @@
 			<key>Name</key>
 			<string>Default</string>
 			<key>Non Ascii Font</key>
-			<string>Inconsolata 14</string>
+			<string>Inconsolata 18</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>Inconsolata 14</string>
+			<string>Inconsolata 18</string>
 			<key>Option Key Sends</key>
 			<integer>2</integer>
 			<key>Prompt Before Closing 2</key>
@@ -1737,6 +1737,8 @@
 	<integer>8</integer>
 	<key>RightOption</key>
 	<integer>3</integer>
+	<key>SUAutomaticallyUpdate</key>
+	<true/>
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedURL</key>
@@ -1744,7 +1746,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-05-01T02:29:16Z</date>
+	<date>2015-05-19T00:41:00Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -1798,6 +1800,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>2.0</string>
+	<string>2.1</string>
 </dict>
 </plist>
