--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,22 @@
 *~
 .DS_Store
 
+\*ielm\*
+
 .emacs.d/.emacs.desktop*
 .emacs.d/.mc-lists.el
 .emacs.d/ac-comphist.dat
+.emacs.d/bookmarks
 .emacs.d/elpa
 .emacs.d/eshell/history
+.emacs.d/ido.last
 .emacs.d/projectile-bookmarks.eld
+.emacs.d/recentf
 .emacs.d/slime
+.emacs.d/smex-items
+.emacs.d/srecode-map.el
 .emacs.d/workgroups
 .emacs.d/xkcd
+.emacs.desktop
 
 TAGS
