Playing around with git diff way more than anyone should

--- a/.gitconfig
+++ b/.gitconfig
@@ -22,8 +22,11 @@
   cop6 = checkout @{-6}
   cp = cherry-pick
   cpx = cherry-pick -x
-  d = diff
-  dc = diff --cached
+  d = !cdiff
+  da = diff --word-diff=color
+  dc = !cdiff --cached
+  dcs = !cdiff --side-by-side --width=55 --cached
+  ds = !cdiff --side-by-side --width=55
   f = fetch
   fp = fetch --prune
   it = !git init && git commit --message "root" --allow-empty
@@ -67,3 +70,6 @@
 
 [rebase]
   autosquash = true
+
+[interactive]
+  singleKey = true
