Use updated gitx and menumeters, update brew cask installs
- Fuck you magit
- iTerm2 font to 20

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 
 \*ielm\*
 
+.emacs.d/.cask
 .emacs.d/.emacs.desktop*
 .emacs.d/.mc-lists.el
+.emacs.d/abbrev_defs
 .emacs.d/ac-comphist.dat
 .emacs.d/bookmarks
 .emacs.d/elpa
