--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -938,6 +938,8 @@
 			<array/>
 			<key>Terminal Type</key>
 			<string>xterm</string>
+			<key>Thin Strokes</key>
+			<integer>0</integer>
 			<key>Transparency</key>
 			<real>0.0</real>
 			<key>Triggers</key>
