dotfiles update. ssh config, pushf

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,11 +8,11 @@
   b = branch
   bb = bisect bad
   bg = bisect good
-  bs = bisect start
   branch-name = rev-parse --abbrev-ref HEAD
+  bs = bisect start
   cam = commit --all --message
-  ci = commit
   cf = commit --fixup
+  ci = commit
   co = checkout
   com = checkout master
   cop2 = checkout @{-2}
@@ -35,16 +35,17 @@
   mm = merge master
   mmours = merge --strategy recursive --strategy-option ours master
   oops = commit --amend --reuse-message HEAD
-  pirg = push --set-upstream origin HEAD
   phm = push heroku master
+  pirg = push --set-upstream origin HEAD
   poh = push --set-upstream origin HEAD
   pr = pull --rebase
-  rb = reset --mixed HEAD~1
+  pushf = push --force-with-lease
   r = rebase
   ra = rebase --abort
+  rb = reset --mixed HEAD~1
+  rbm = rebase --autosquash master
   rc = rebase --continue
   ri = rebase --interactive
-  rbm = rebase --autosquash master
   rpo = remote prune origin
   s = status
   sa = stash apply
