--- a/.gitconfig
+++ b/.gitconfig
@@ -28,8 +28,10 @@
   d = !ydiff
   da = diff --word-diff=color
   dc = !ydiff --cached
-  dcs = !ydiff --side-by-side --width=55 --cached
-  ds = !ydiff --side-by-side --width=55
+  dcs = !ydiff --cached --side-by-side --width=65
+  df = !ydiff
+  dfc = !ydiff --cached
+  ds = !ydiff --side-by-side --width=65
   f = fetch
   fp = fetch --prune
   it = !git init && git commit --message "root" --allow-empty
